--- a/.gitignore
+++ b/.gitignore
@@ -19,16 +19,21 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
 *.pem
+.AppleDouble
+.LSOverride
+Thumbs.db
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+debug.log
 
 # env files (can opt-in for committing if needed)
 .env*
@@ -39,3 +44,27 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.idea
+*.swp
+*.swo
+*~
+
+# OS
+*.log
+.cache
+
+# Temporal/backup files
+*.bak
+*.tmp
+~*
+
+# User data files (do not commit real data)
+/data/*.xlsx
+!/data/ejemplo_*.xlsx
