feat: Implement authentication flow with OTP verification and user profile management
- Added callback route for OTP verification with error handling and parameter validation.
- Enhanced login page with rate limiting, error messaging, and OTP resend functionality.
- Created user profile page with editable name and display of user role, including validation and success/error messaging.
- Developed ProtectedRoute component to manage access based on authentication and user roles.
- Introduced useAuth hook for managing user state and permissions, including session refresh logic.
- Implemented Supabase client for both server and client contexts, ensuring proper cookie handling.
- Added middleware for authentication checks on all routes, redirecting users as necessary.

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ debug.log
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -68,3 +72,32 @@ next-env.d.ts
 # User data files (do not commit real data)
 /data/*.xlsx
 !/data/ejemplo_*.xlsx
+
+# -----------------------------------------------------------------------------
+# SPECIFIC USER EXCLUSIONS (Clean Repo)
+# -----------------------------------------------------------------------------
+
+# AI Assistant Context
+.gemini/
+.claude/
+
+# Documentation (User requested to exclude)
+/docs/
+*.md
+!README.md
+
+# Technical Analysis Files
+ANALISIS_TECNICO.md
+INCONSISTENCIAS.md
+RESUMEN_MEJORAS.md
+*.json
+!package.json
+!package-lock.json
+!tsconfig.json
+!components.json
+!next.config.ts
+!postcss.config.mjs
+!eslint.config.mjs
+
+# Scripts
+/scripts/
